--- a/week-04/exercise/01_softmax.ipynb
+++ b/week-04/exercise/01_softmax.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 5,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-01-23T10:01:14.975119Z",
      "start_time": "2024-01-23T10:01:14.967071Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -22,6 +22,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "d0d974846abdb6b5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-23T10:01:15.226097Z",
+     "start_time": "2024-01-23T10:01:15.222972Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Copying eps-greedy code from the previous notebook\n",
@@ -35,7 +44,7 @@
     "    def __init__(self, n_arms: int):\n",
     "        self.n_arms = n_arms\n",
     "        self.counts = np.zeros(n_arms)\n",
-    "        self.values = np.zeros(n_arms)\n",
+    "        self.thetas = np.zeros(n_arms)\n",
     "\n",
     "\n",
     "class EpsilonGreedy:\n",
@@ -47,7 +56,7 @@
     "        if np.random.random() < eps:\n",
     "            arm = np.random.randint(state.n_arms)\n",
     "        else:\n",
-    "            arm = np.argmax(state.values)\n",
+    "            arm = np.argmax(state.thetas)\n",
     "        return arm\n",
     "\n",
     "\n",
@@ -71,71 +80,72 @@
     "    s.counts[arm] += 1\n",
     "    s.values[arm] = ((s.counts[arm] - 1) * s.values[arm] + reward) / s.counts[arm]\n",
     "    return s"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-23T10:01:15.226097Z",
-     "start_time": "2024-01-23T10:01:15.222972Z"
-    }
-   },
-   "id": "d0d974846abdb6b5",
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Q1. Implement softmax policy"
-   ],
+   "id": "3bfaa229f6152e5",
    "metadata": {
     "collapsed": false
    },
-   "id": "3bfaa229f6152e5"
+   "source": [
+    "# Q1. Implement softmax policy"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "97a43581bc7862e0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-23T10:01:16.073802Z",
+     "start_time": "2024-01-23T10:01:16.071307Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class Softmax:\n",
     "    @classmethod\n",
     "    def get_arm(cls, state: State, tau: float = 0.10) -> int:\n",
-    "        logit = state.values / tau\n",
+    "        logit = state.thetas / tau\n",
+    "        logit = logit - np.max(logit)\n",
     "        raise NotImplementedError(\"Implement this line\")  # p = ...\n",
     "        arm = np.random.choice(state.n_arms, p=p)\n",
     "        return arm"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-23T10:01:16.073802Z",
-     "start_time": "2024-01-23T10:01:16.071307Z"
-    }
-   },
-   "id": "97a43581bc7862e0",
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Q2. Evaluate the Regrets"
-   ],
+   "id": "cb58295ec7aa71c",
    "metadata": {
     "collapsed": false
    },
-   "id": "cb58295ec7aa71c"
+   "source": [
+    "# Q2. Evaluate the Regrets"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "cbc59427c30db412",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-23T10:01:17.120634Z",
+     "start_time": "2024-01-23T10:01:17.091017Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "NotImplementedError",
      "evalue": "Keep track of rewards here",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNotImplementedError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 22\u001B[0m\n\u001B[1;32m     20\u001B[0m     eg_rewards\u001B[38;5;241m.\u001B[39mappend(reward)\n\u001B[1;32m     21\u001B[0m     eg_state \u001B[38;5;241m=\u001B[39m update(eg_state, arm, reward)\n\u001B[0;32m---> 22\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mNotImplementedError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mKeep track of rewards here\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     24\u001B[0m \u001B[38;5;66;03m# Softmax\u001B[39;00m\n\u001B[1;32m     25\u001B[0m sm_state \u001B[38;5;241m=\u001B[39m State(\u001B[38;5;28mlen\u001B[39m(thetas))\n",
-      "\u001B[0;31mNotImplementedError\u001B[0m: Keep track of rewards here"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m     eg_rewards\u001b[38;5;241m.\u001b[39mappend(reward)\n\u001b[1;32m     21\u001b[0m     eg_state \u001b[38;5;241m=\u001b[39m update(eg_state, arm, reward)\n\u001b[0;32m---> 22\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKeep track of rewards here\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Softmax\u001b[39;00m\n\u001b[1;32m     25\u001b[0m sm_state \u001b[38;5;241m=\u001b[39m State(\u001b[38;5;28mlen\u001b[39m(thetas))\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: Keep track of rewards here"
      ]
     }
    ],
@@ -175,25 +185,17 @@
     "\n",
     "# Calculate regrets\n",
     "raise NotImplementedError(\"Calculate regrets\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-23T10:01:17.120634Z",
-     "start_time": "2024-01-23T10:01:17.091017Z"
-    }
-   },
-   "id": "cbc59427c30db412",
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "45280c6fc9ac9eae",
    "metadata": {
     "collapsed": false
    },
-   "id": "45280c6fc9ac9eae"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
