--- a/week-04/exercise/01_softmax.ipynb
+++ b/week-04/exercise/01_softmax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d0d974846abdb6b5",
    "metadata": {
     "ExecuteTime": {
@@ -44,19 +44,19 @@
     "    def __init__(self, n_arms: int):\n",
     "        self.n_arms = n_arms\n",
     "        self.counts = np.zeros(n_arms)\n",
-    "        self.thetas = np.zeros(n_arms)\n",
+    "        self.thetas_pred = np.ones(n_arms) / 2\n",
     "\n",
     "\n",
     "class EpsilonGreedy:\n",
     "    \"\"\"Epsilon-greedy policy\"\"\"\n",
     "\n",
     "    @classmethod\n",
-    "    def get_arm(cls, state: State, eps: float = 0.1) -> int:\n",
+    "    def get_arm(cls, state: State, eps: float = 0.10) -> int:\n",
     "        # Decide to either explore or exploit\n",
     "        if np.random.random() < eps:\n",
     "            arm = np.random.randint(state.n_arms)\n",
     "        else:\n",
-    "            arm = np.argmax(state.thetas)\n",
+    "            arm = np.argmax(state.thetas_pred)\n",
     "        return arm\n",
     "\n",
     "\n",
@@ -78,7 +78,7 @@
     "def update(state: State, arm: int, reward: float) -> State:\n",
     "    s = copy.deepcopy(state)\n",
     "    s.counts[arm] += 1\n",
-    "    s.values[arm] = ((s.counts[arm] - 1) * s.values[arm] + reward) / s.counts[arm]\n",
+    "    s.thetas_pred[arm] = ((s.counts[arm] - 1) * s.thetas_pred[arm] + reward) / s.counts[arm]\n",
     "    return s"
    ]
   },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "97a43581bc7862e0",
    "metadata": {
     "ExecuteTime": {
@@ -107,8 +107,8 @@
    "source": [
     "class Softmax:\n",
     "    @classmethod\n",
-    "    def get_arm(cls, state: State, tau: float = 0.10) -> int:\n",
-    "        logit = state.thetas / tau\n",
+    "    def get_arm(cls, state: State, tau: float = 0.05) -> int:\n",
+    "        logit = state.thetas_pred / tau\n",
     "        logit = logit - np.max(logit)\n",
     "        raise NotImplementedError(\"Implement this line\")  # p = ...\n",
     "        arm = np.random.choice(state.n_arms, p=p)\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cbc59427c30db412",
    "metadata": {
     "ExecuteTime": {
@@ -139,22 +139,23 @@
    "outputs": [
     {
      "ename": "NotImplementedError",
-     "evalue": "Keep track of rewards here",
+     "evalue": "Implement this line",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m     eg_rewards\u001b[38;5;241m.\u001b[39mappend(reward)\n\u001b[1;32m     21\u001b[0m     eg_state \u001b[38;5;241m=\u001b[39m update(eg_state, arm, reward)\n\u001b[0;32m---> 22\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKeep track of rewards here\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Softmax\u001b[39;00m\n\u001b[1;32m     25\u001b[0m sm_state \u001b[38;5;241m=\u001b[39m State(\u001b[38;5;28mlen\u001b[39m(thetas))\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Keep track of rewards here"
+      "Cell \u001b[0;32mIn[4], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m sm_rewards \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_trials):\n\u001b[0;32m---> 28\u001b[0m     arm \u001b[38;5;241m=\u001b[39m \u001b[43mSoftmax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_arm\u001b[49m\u001b[43m(\u001b[49m\u001b[43msm_state\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m     reward \u001b[38;5;241m=\u001b[39m react(env, arm)\n\u001b[1;32m     30\u001b[0m     sm_state \u001b[38;5;241m=\u001b[39m update(sm_state, arm, reward)\n",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m, in \u001b[0;36mSoftmax.get_arm\u001b[0;34m(cls, state, tau)\u001b[0m\n\u001b[1;32m      4\u001b[0m logit \u001b[38;5;241m=\u001b[39m state\u001b[38;5;241m.\u001b[39mthetas_pred \u001b[38;5;241m/\u001b[39m tau\n\u001b[1;32m      5\u001b[0m logit \u001b[38;5;241m=\u001b[39m logit \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mmax(logit)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImplement this line\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# p = ...\u001b[39;00m\n\u001b[1;32m      7\u001b[0m arm \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice(state\u001b[38;5;241m.\u001b[39mn_arms, p\u001b[38;5;241m=\u001b[39mp)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m arm\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: Implement this line"
      ]
     }
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "thetas = [0.80, 0.50, 0.35, 0.60]\n",
+    "thetas = [0.65, 0.50, 0.35, 0.60]\n",
     "env = Environment(thetas)\n",
-    "num_trials = 1000\n",
+    "num_trials = 500\n",
     "\n",
     "# Oracle\n",
     "opt_rewards = []\n",
@@ -169,9 +170,9 @@
     "for i in range(num_trials):\n",
     "    arm = EpsilonGreedy.get_arm(eg_state)\n",
     "    reward = react(env, arm)\n",
-    "    eg_rewards.append(reward)\n",
     "    eg_state = update(eg_state, arm, reward)\n",
-    "    raise NotImplementedError(\"Keep track of rewards here\")\n",
+    "    #raise NotImplementedError(\"Keep track of rewards here\")\n",
+    "\n",
     "\n",
     "# Softmax\n",
     "sm_state = State(len(thetas))\n",
@@ -179,42 +180,57 @@
     "for i in range(num_trials):\n",
     "    arm = Softmax.get_arm(sm_state)\n",
     "    reward = react(env, arm)\n",
-    "    sm_rewards.append(reward)\n",
     "    sm_state = update(sm_state, arm, reward)\n",
     "    raise NotImplementedError(\"Keep track of rewards here\")\n",
     "\n",
     "# Calculate regrets\n",
-    "raise NotImplementedError(\"Calculate regrets\")\n"
+    "raise NotImplementedError(\"Calculate regrets below\")\n",
+    "# eg_regret = ...\n",
+    "# sm_regret = ...\n",
+    "\n",
+    "# Plot regrets\n",
+    "plt.plot(eg_regret, label=\"Epsilon-greedy\")\n",
+    "plt.plot(sm_regret, label=\"Softmax\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45280c6fc9ac9eae",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "145da65d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c82600f",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
