Add policy iteration code

--- a/week-06/lecture/mbrl.ipynb
+++ b/week-06/lecture/mbrl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,15 @@
     "import jax.numpy as jnp\n",
     "from numpyro.infer import MCMC, NUTS\n",
     "from itertools import product\n",
+    "from typing import Tuple\n",
+    "from numpy.typing import NDArray\n",
     "\n",
     "rng_key = jax.random.PRNGKey(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,23 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State: 1, Action: 1, Reward: 1.7644137334598737\n",
-      "State: 1, Action: 0, Reward: 0.5918058443861409\n",
-      "State: 1, Action: 0, Reward: -1.172098637360545\n",
-      "State: 0, Action: 1, Reward: 1.9151350957581499\n",
-      "State: 1, Action: 0, Reward: -0.04030941450177798\n",
-      "State: 0, Action: 1, Reward: 1.081824572708424\n",
-      "State: 1, Action: 1, Reward: 3.3165145224564534\n",
-      "State: 1, Action: 1, Reward: 0.9866620231437442\n",
-      "State: 0, Action: 0, Reward: 1.394226635556238\n",
-      "State: 0, Action: 0, Reward: 2.307613019086643\n",
+      "State: 1, Action: 1, Reward: 3.5626485439432516\n",
+      "State: 1, Action: 0, Reward: 0.08674049946635698\n",
+      "State: 0, Action: 1, Reward: 1.5155929367283145\n",
+      "State: 1, Action: 1, Reward: 2.642991390603359\n",
+      "State: 1, Action: 1, Reward: 4.050187765651558\n",
+      "State: 1, Action: 1, Reward: 4.735093173729242\n",
+      "State: 1, Action: 1, Reward: 2.3329309020785756\n",
+      "State: 1, Action: 0, Reward: 0.5269864672580259\n",
+      "State: 0, Action: 0, Reward: 0.5124401925578577\n",
+      "State: 0, Action: 0, Reward: 0.38451923945558564\n",
       "...\n"
      ]
     }
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 3000/3000 [00:03<00:00, 914.88it/s, 7 steps of size 5.69e-01. acc. prob=0.92] \n"
+      "sample: 100%|██████████| 3000/3000 [00:03<00:00, 834.83it/s, 7 steps of size 5.52e-01. acc. prob=0.92] \n"
      ]
     }
    ],
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,15 +192,15 @@
      "output_type": "stream",
      "text": [
       "Transition probabilities:\n",
-      "P(s' | s=0, a=0) = [0.87283117 0.12716895]\n",
-      "P(s' | s=0, a=1) = [0.08410239 0.9158976 ]\n",
-      "P(s' | s=1, a=0) = [0.804974   0.19502601]\n",
-      "P(s' | s=1, a=1) = [0.14632195 0.85367817]\n",
+      "P(s' | s=0, a=0) = [0.92480195 0.07519802]\n",
+      "P(s' | s=0, a=1) = [0.0983525 0.9016475]\n",
+      "P(s' | s=1, a=0) = [0.9293374  0.07066277]\n",
+      "P(s' | s=1, a=1) = [0.2576761 0.7423239]\n",
       "Reward means:\n",
-      "E[r | s=0, a=0] = 2.0038230419158936\n",
-      "E[r | s=0, a=1] = 1.5468661785125732\n",
-      "E[r | s=1, a=0] = -0.12734664976596832\n",
-      "E[r | s=1, a=1] = 2.970562696456909\n"
+      "E[r | s=0, a=0] = 1.7359533309936523\n",
+      "E[r | s=0, a=1] = 1.5451616048812866\n",
+      "E[r | s=1, a=0] = -0.21869699656963348\n",
+      "E[r | s=1, a=1] = 2.837351083755493\n"
      ]
     }
    ],
@@ -230,26 +232,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_evaluation(\n",
+    "        policy: NDArray[np.float64],\n",
+    "        P: NDArray[np.float64],\n",
+    "        R: NDArray[np.float64],\n",
+    "        gamma: float = 0.95,\n",
+    "        theta: float = 0.01,\n",
+    "        max_iter: int = 1000\n",
+    ") -> NDArray[np.float64]:\n",
+    "    \"\"\"Perform policy evaluation to estimate the state value function with a given policy.\n",
+    "    \"\"\"\n",
+    "    num_states = P.shape[0]\n",
+    "    num_actions = P.shape[1]\n",
+    "    assert policy.shape == (num_states, num_actions)\n",
+    "\n",
+    "    V = np.zeros(num_states)\n",
+    "\n",
+    "    for i in range(max_iter):\n",
+    "        delta = 0\n",
+    "        V_new = np.zeros(num_states)\n",
+    "        for s in range(num_states):\n",
+    "            for a in range(num_actions):\n",
+    "                for s_next in range(num_states):\n",
+    "                    V_new[s] += policy[s, a] * P[s, a, s_next] * (R[s, a] + gamma * V[s_next])\n",
+    "            delta = max(delta, np.abs(V_new[s] - V[s]))\n",
+    "\n",
+    "        if delta < theta:\n",
+    "            break\n",
+    "        V = V_new\n",
+    "\n",
+    "    return V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_improvement(\n",
+    "        V: NDArray[np.float64],\n",
+    "        P: NDArray[np.float64],\n",
+    "        R: NDArray[np.float64],\n",
+    "        gamma=0.99\n",
+    ") -> NDArray[np.float64]:\n",
+    "    \"\"\"Perform policy improvement to find the optimal policy given the value function.\"\"\"\n",
+    "    num_states = P.shape[0]\n",
+    "    num_actions = P.shape[1]\n",
+    "    policy = np.zeros((num_states, num_actions))\n",
+    "\n",
+    "    for s in range(num_states):\n",
+    "        Q = np.zeros(num_actions)\n",
+    "        for a in range(num_actions):\n",
+    "            for s_next in range(num_states):\n",
+    "                Q[a] += P[s, a, s_next] * (R[s, a] + gamma * V[s_next])\n",
+    "\n",
+    "        ai = np.argmax(Q)\n",
+    "        policy[s, ai] = 1.0\n",
+    "\n",
+    "    assert np.allclose(np.sum(policy, axis=1), 1.0)\n",
+    "    return policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_iteration(\n",
+    "        P: NDArray[np.float64],\n",
+    "        R: NDArray[np.float64],\n",
+    "        gamma: float = 0.99\n",
+    ") -> Tuple[NDArray[np.float64], NDArray[np.float64]]:\n",
+    "    \"\"\"Perform policy iteration to find the optimal policy and value function.\"\"\"\n",
+    "    num_states = P.shape[0]\n",
+    "    num_actions = P.shape[1]\n",
+    "    policy = np.zeros((num_states, num_actions))\n",
+    "    policy[:, 0] = 1.0  # Start with a policy that always takes action 0\n",
+    "\n",
+    "    while True:\n",
+    "        V = policy_evaluation(policy, P, R, gamma)\n",
+    "        new_policy = policy_improvement(V, P, R, gamma)\n",
+    "\n",
+    "        if np.array_equal(policy, new_policy):\n",
+    "            break\n",
+    "\n",
+    "        policy = new_policy\n",
+    "\n",
+    "    return policy, V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Array([[[0.87283117, 0.12716895],\n",
-       "        [0.08410239, 0.9158976 ]],\n",
-       "\n",
-       "       [[0.804974  , 0.19502601],\n",
-       "        [0.14632195, 0.85367817]]], dtype=float32)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal Policy:\n",
+      " [[0. 1.]\n",
+      " [0. 1.]]\n",
+      "Optimal Value Function: [270.62017394 271.9850511 ]\n"
+     ]
     }
    ],
    "source": [
-    "trans_probs_mean"
+    "# Run policy iteration\n",
+    "P = np.zeros((2, 2, 2))  # [state, action, next_state]\n",
+    "\n",
+    "# State 0. Using the true transition probabilities for simplicity\n",
+    "P[0, 0, 0] = 0.9  # Action 0: 90% chance to stay in state 0\n",
+    "P[0, 0, 1] = 0.1  # Action 0: 10% chance to go to state 1\n",
+    "P[0, 1, 0] = 0.1  # Action 1: 10% chance to stay in state 0\n",
+    "P[0, 1, 1] = 0.9  # Action 1: 90% chance to go to state 1\n",
+    "\n",
+    "# State 1\n",
+    "P[1, 0, 0] = 0.9  # Action 0: 90% chance to go to state 0\n",
+    "P[1, 0, 1] = 0.1  # Action 0: 10% chance to stay in state 1\n",
+    "P[1, 1, 0] = 0.2  # Action 1: 20% chance to go to state 0\n",
+    "P[1, 1, 1] = 0.8  # Action 1: 80% chance to stay in state 1\n",
+    "\n",
+    "R = np.zeros((2, 2))  # [state, action]\n",
+    "\n",
+    "# State 0\n",
+    "R[0, 0] = 2.0  # Expected reward for action 0\n",
+    "R[0, 1] = 1.5  # Expected reward for action 1\n",
+    "\n",
+    "# State 1\n",
+    "R[1, 0] = 0.0  # Expected reward for action 0\n",
+    "R[1, 1] = 3.0  # Expected reward for action 1\n",
+    "optimal_policy, optimal_value = policy_iteration(P, R)\n",
+    "print(\"Optimal Policy:\\n\", optimal_policy)\n",
+    "print(\"Optimal Value Function:\", optimal_value)\n"
    ]
   },
   {
