--- a/week-11/lecture/cbf.ipynb
+++ b/week-11/lecture/cbf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,9 @@
     "    2D system dynamics with a goal-seeking component\n",
     "    x and u are both 2D vectors\n",
     "    \"\"\"\n",
-    "    goal = jnp.array([2.5, 1.5])  # Goal position on the other side of the obstacle\n",
-    "    goal_attraction = 0.5 * (goal - x)  # Attraction to goal\n",
-    "    return goal_attraction + u  # Removed the -x term to create need for obstacle avoidance"
+    "    goal = jnp.array([2.5, 1.5])\n",
+    "    goal_attraction = 0.5 * (goal - x)\n",
+    "    return goal_attraction + u"
    ]
   },
   {
