Correct a mistake in a comment

--- a/week-11/lecture/cbf.ipynb
+++ b/week-11/lecture/cbf.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     "        We use the Lagrange multiplier method for inequality constraints\n",
     "        \"\"\"\n",
     "        constraint_val = -cbf_constraint(x0, u)\n",
-    "        constraint_violation = jnp.maximum(constraint_val, 0.0)  # Max(0, -h(x))\n",
+    "        constraint_violation = jnp.maximum(constraint_val, 0.0)\n",
     "        return objective_function(u) + 1000.0 * jnp.sum(constraint_violation)\n",
     "\n",
     "    # We use Adam optimizer to solve the QP\n",
