--- a/week-11/lecture/cbf.ipynb
+++ b/week-11/lecture/cbf.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "    f_x = dynamics(x, jnp.zeros(2))  # f(x) = dx/dt where u = 0\n",
     "\n",
     "    # Take a derivative of x' = f(x) + g(x)u w.r.t. u\n",
-    "    g_x = jax.jacfwd(lambda u_: dynamics(x, u_))(x)\n",
+    "    g_x = jax.jacfwd(lambda u_: dynamics(x, u_))(jnp.zeros(2))\n",
     "\n",
     "    # Lie derivatives\n",
     "    lie_f = dh_dx @ f_x\n",
