--- a/week-11/lecture/cbf.ipynb
+++ b/week-11/lecture/cbf.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "        We use the Lagrange multiplier method for inequality constraints\n",
     "        \"\"\"\n",
     "        constraint_val = -cbf_constraint(x0, u)\n",
-    "        constraint_violation = jnp.maximum(constraint_val, 0.0)  # Max(0, -h(x))\n",
+    "        constraint_violation = jnp.maximum(constraint_val, 0.0)\n",
     "        return objective_function(u) + 1000.0 * jnp.sum(constraint_violation)\n",
     "\n",
     "    @jax.jit\n",
