--- a/conv_verification/lecture/ctl.ipynb
+++ b/conv_verification/lecture/ctl.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "ed106aaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "States where EF converted holds: {'Disengaged', 'Browsing', 'Converted', 'Disenaged', 'Engaged', 'Abandoned'}\n",
-      "Formula holds for all states: True\n",
-      "Formula holds for initial state (Browsing): True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyModelChecking import CTL, Kripke\n",
     "from pyModelChecking.CTL.model_checking import modelcheck\n",
     "\n",
-    "# Define a Kripke Structure with self-loops for terminal states\n",
+    "\n",
     "ks = Kripke(\n",
     "    S=[\"Browsing\", \"Engaged\", \"Disengaged\", \"Converted\", \"Abandoned\"],\n",
     "    S0=[\"Browsing\"],\n",
@@ -36,10 +26,7 @@
     "        (\"Disengaged\", \"Abandoned\"),\n",
     "        (\"Disenaged\", \"Browsing\"),\n",
     "        (\"Converted\", \"Converted\"),\n",
-    "        (\"Converted\", \"Engaged\"),\n",
-    "        (\"Converted\", \"Browsing\"),\n",
     "        (\"Abandoned\", \"Abandoned\"),\n",
-    "        (\"Abandoned\", \"Browsing\"),\n",
     "    ],\n",
     "    L={\n",
     "        \"Browsing\": {\"Active\"},\n",
@@ -48,26 +35,63 @@
     "        \"Converted\": {\"Active\", \"Interested\", \"Converted\"},\n",
     "        \"Abandoned\": set(),\n",
     "    },\n",
-    ")\n",
-    "\n",
-    "# Create the CTL formula directly using constructors\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f1b2a65d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formula `EF Converted` holds for initial state: True\n",
+      "Formula `(Active --> AF Converted)` holds for initial state: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the CTL formula\n",
     "converted = CTL.AtomicProposition(\"Converted\")\n",
-    "formula = CTL.EF(converted)\n",
     "\n",
-    "# Use the modelcheck function to check the formula\n",
-    "result = modelcheck(ks, formula)\n",
-    "print(f\"States where EF converted holds: {result}\")\n",
+    "formula1 = CTL.EF(converted)\n",
     "\n",
     "# Check if the initial state satisfies the formula\n",
-    "# If no initial state is specified, we can check if all states satisfy it\n",
-    "print(f\"Formula holds for all states: {all(s in result for s in ks.states())}\")\n",
-    "print(f\"Formula holds for initial state (Browsing): {'Browsing' in result}\")"
+    "result1 = modelcheck(ks, formula1)\n",
+    "print(f\"Formula `{formula1}` holds for initial state: {'Browsing' in result1}\")\n",
+    "\n",
+    "# Check if Active implies always eventually converted\n",
+    "active = CTL.AtomicProposition(\"Active\")\n",
+    "formula2 = CTL.Imply(active, CTL.AF(converted))\n",
+    "result2 = modelcheck(ks, formula2)\n",
+    "print(f\"Formula `{formula2}` holds for initial state: {'Browsing' in result2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f27ee90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Converted', 'Disenaged', 'Abandoned', 'Disengaged'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1b2a65d",
+   "id": "9f7f1458",
    "metadata": {},
    "outputs": [],
    "source": []
