Add ctl and ltl examples

--- a/10_conv_verification/lecture/ctl.ipynb
+++ b/10_conv_verification/lecture/ctl.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "16a0f3d3",
+   "metadata": {},
+   "source": [
+    "# Computation Tree Logic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "ed106aaa",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,7 @@
     "        (\"Engaged\", \"Disengaged\"),\n",
     "        (\"Disengaged\", \"Disengaged\"),\n",
     "        (\"Disengaged\", \"Abandoned\"),\n",
-    "        (\"Disenaged\", \"Browsing\"),\n",
+    "        (\"Disengaged\", \"Browsing\"),\n",
     "        (\"Converted\", \"Converted\"),\n",
     "        (\"Abandoned\", \"Abandoned\"),\n",
     "    ],\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "f1b2a65d",
    "metadata": {},
    "outputs": [
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "f27ee90f",
    "metadata": {},
    "outputs": [
@@ -80,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Converted', 'Disenaged', 'Abandoned', 'Disengaged'}\n"
+      "{'Disengaged', 'Abandoned', 'Converted'}\n"
      ]
     }
    ],
@@ -89,11 +97,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f7f1458",
+   "cell_type": "markdown",
+   "id": "834ae0e1",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
