Revise the sample code for the lecture note 13

--- a/13_numerical_optimization/gradient_descent.ipynb
+++ b/13_numerical_optimization/gradient_descent.ipynb
@@ -70,12 +70,12 @@
     "for i in range(max_iters):\n",
     "    grad_value = grad_f(x)\n",
     "    x_new = x - learning_rate * grad_value\n",
-    "\n",
+    "    \n",
     "    # Check for convergence\n",
     "    if jnp.linalg.norm(x_new - x) < tol:\n",
     "        print(f\"Converged after {i} iterations.\")\n",
     "        break\n",
-    "\n",
+    "    \n",
     "    x = x_new\n",
     "\n",
     "print(\"Optimal solution:\", x)\n",
@@ -104,7 +104,6 @@
     "import jax.numpy as jnp\n",
     "from chex import Array\n",
     "from jax import grad, jit\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "A = jnp.array([[4.0, 1.0], [1.0, 3.0]])\n",
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f7b93a33",
    "metadata": {},
    "outputs": [
@@ -164,7 +163,7 @@
     }
    ],
    "source": [
-    "learning_rate = 0.01  # Smaller learning rate for stability\n",
+    "learning_rate = 0.01\n",
     "max_iters = 1000\n",
     "tol = 1e-8\n",
     "rho = 10.0\n",
@@ -184,17 +183,22 @@
     "eq_violation = abs(float(g(x)))\n",
     "ineq_violation = max(0, float(h(x)))\n",
     "\n",
-    "print(f\"Converged after {i} iterations with rho = {rho}.\")\n",
+    "print(f\"Converged after {i} iterations.\")\n",
     "print(f\"Optimal solution: {x}\")\n",
     "print(f\"Function value at optimal solution: {f(x):.2f}\")\n",
     "print(f\"Equality constraint violation: {eq_violation:.2f}\")\n",
-    "print(f\"Inequality constraint violation: {ineq_violation:.2f}\")\n"
+    "print(f\"Inequality constraint violation: {ineq_violation:.2f}\")\n",
+    "# Converged after 181 iterations with rho = 10.0.\n",
+    "# Optimal solution: [0.19789854 0.77583164]\n",
+    "# Function value at optimal solution: -0.61\n",
+    "# Equality constraint violation: 0.03\n",
+    "# Inequality constraint violation: 0.00"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0981d97",
+   "id": "f8f5982a",
    "metadata": {},
    "outputs": [],
    "source": []
